# Lem_in

./: ._Makefile  CMakeLists.txt  Makefile  algorithm.c  change_list.c  check_func.c  check_funcn.c  check_maxint.c  check_ways_two.c  create_func.c  del_func.c  del_func_out.c  func_for_ways.c  lem_valid_n.c  lemin_valid.c  main.c  next_valid.c  out_put_ants.c  output.c  pars_len_func.c  pars_ways.c  print.c  print_an_func.c  print_ants.c  print_ants_cross.c  room.c  test  valid_func.c  yescom.c
includes/: lem_in.h
libft/header/: ._ft_printf.h  ._get_next_line.h
src/: ._algorithm.c  ._change_list.c  ._check_funcn.c  ._check_maxint.c  ._create_func.c  ._del_func.c  ._del_func_out.c  ._func_for_ways.c  ._lem_valid_n.c  ._lemin_valid.c  ._next_valid.c  ._pars_len_func.c  ._pars_ways.c  ._print_an_func.c  ._print_ants.c  ._print_ants_cross.c  ._room.c  ._valid_func.c  ._yescom.c  algorithm.c  change_list.c  check_func.c  check_funcn.c  check_maxint.c  check_ways_two.c  create_func.c  del_func.c  del_func_out.c  func_for_ways.c  lem_valid_n.c  lemin_valid.c  main.c  next_valid.c  out_put_ants.c  pars_len_func.c  pars_ways.c  print.c  print_an_func.c  print_ants.c  print_ants_cross.c  (+3 more)
